--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "leaflet": "^1.9.4",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.1",
     "react-select": "^5.10.2",
+    "react-use": "^17.6.0",
     "recharts": "^3.2.1",
     "tailwindcss": "^4.1.13"
   },
